--- a/index.html
+++ b/index.html
@@ -934,43 +934,30 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>Zendi</h3>
-                    <p>Soluciones de pago internacionales para agencias de viajes colombianas.</p>
-                    <div class="social-icons">
-                        <a href="#" class="social-icon">📘</a>
-                        <a href="#" class="social-icon">📷</a>
-                        <a href="#" class="social-icon">🐦</a>
-                    </div>
-                </div>
-                <div class="footer-section">
-                    <h3>Enlaces Legales</h3>
-                    <a href="#">Términos y Condiciones</a>
-                    <a href="#">Política de Privacidad</a>
-                    <a href="#">Política de Tratamiento de Datos</a>
-                    <a href="#">Contacto</a>
-                </div>
-                <div class="footer-section">
-                    <h3>Servicios</h3>
-                    <a href="#">Cuenta Global Empresas</a>
-                    <a href="#">Transferencias Internacionales</a>
-                    <a href="#">Conversiones de Divisas</a>
-                    <a href="#">Cobros Internacionales</a>
-                </div>
-                <div class="footer-section">
-                    <h3>Soporte</h3>
-                    <a href="#">Centro de Ayuda</a>
-                    <a href="#">Documentación</a>
-                    <a href="#">API</a>
-                    <a href="#">Status</a>
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Zendi</h3>
+                <p>Soluciones de pago internacionales para agencias de viajes colombianas.</p>
+                <div class="social-icons">
+                    <a href="#" class="social-icon">📘</a>
+                    <a href="#" class="social-icon">📷</a>
+                    <a href="#" class="social-icon">🐦</a>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 Zendi. Todos los derechos reservados.</p>
+            <div class="footer-section">
+                <h3>Enlaces Legales</h3>
+                <a href="#">Términos y Condiciones</a>
+                <a href="#">Política de Privacidad</a>
+                <a href="#">Política de Tratamiento de Datos</a>
+                <a href="#">Políticas AML/CFT</a>
+                <a href="#">Contacto</a>
             </div>
         </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Zendi. Todos los derechos reservados.</p>
+        </div>
+    </div>
     </footer>
 
     <script>
