--- a/index.html
+++ b/index.html
@@ -705,8 +705,8 @@
                 <h1>Compra, vende, recibe y envía divisas en tiempo récord a +90 países</h1>
                 <p>Sin costo Swift y con tipo de cambio justo a través de nuestra plataforma empresarial.</p>
                 <div class="cta-buttons">
-                    <a href="#contact" class="btn btn-primary">Agendar una reunión</a>
-                    <a href="#onboarding" class="btn btn-secondary">Comenzar onboarding</a>
+                    <a href="https://calendly.com/leonardo-t-killb/30min" target="_blank" class="btn btn-primary">Agendar una reunión</a>
+                    <a href="https://in.sumsub.com/websdk/p/uni_bbq1Fmms7C36I27m" target="_blank" class="btn btn-secondary">Comenzar onboarding</a>
                 </div>
             </div>
         </div>
@@ -1048,11 +1048,4 @@
             observer.observe(el);
         });
 
-        // Initialize testimonials slider
-        function initTestimonials() {
-            const slider = document.querySelector('.testimonials-slider');
-            if (slider) {
-                // Add pause on hover
-                slider.addEventListener('mouseenter', () => {
-                    slider.style.animationPlayState = 'paused';
-                });
+       
