--- a/index.html
+++ b/index.html
@@ -695,10 +695,10 @@
 <!-- Hero Section -->
 <section class="hero" id="hero">
 <div class="currency-icons">
-<div class="currency-icon">💵</div>
-<div class="currency-icon">💶</div>
-<div class="currency-icon">💷</div>
-<div class="currency-icon">💴</div>
+<div class="currency-icon"></div>
+<div class="currency-icon"></div>
+<div class="currency-icon"></div>
+<div class="currency-icon"></div>
 </div>
 <div class="container">
 <div class="hero-content">
@@ -974,7 +974,6 @@
 <div class="footer-section">
 <h3>Enlaces Legales</h3>
 <a href="terminos.html" target="_blank">Términos y Condiciones</a>
-<a href="#">Política de Privacidad</a>
 <a href="datos.html" target="_blank">Política de Tratamiento de Datos</a>
 <a href="aml.html" target="_blank">Políticas AML/CFT</a>
 <a href="#">Contacto</a>
