--- a/index.html
+++ b/index.html
@@ -702,8 +702,8 @@
 </div>
 <div class="container">
 <div class="hero-content">
-<h1>Compra, vende, recibe y envía divisas en tiempo récord a +90 países</h1>
-<p>Sin costo Swift y con tipo de cambio justo a través de nuestra plataforma empresarial.</p>
+<h1>Cobra como local. Paga como global. Sin fronteras, sin fricción y con las mejores tasas</h1>
+<p>La solución moderna para agencias de viaje colombianas que quieren operar en el mundo sin límites.</p>
 <div class="cta-buttons">
 <a class="btn btn-primary" href="#contact">Agendar una reunión</a>
 <a class="btn btn-secondary" href="#onboarding">Comenzar onboarding</a>
@@ -887,18 +887,18 @@
 <div class="features-grid">
 <div class="feature-card">
 <div class="feature-icon">🌍</div>
-<h3>Tu Cuenta Global Empresas</h3>
-<p>Con ella no existen fronteras. Podrás usarla hasta en 8 monedas distintas haciendo intercambios instantáneos al tipo de cambio spot (puedes verificarlo en Google).</p>
+<h3>Tu Cuenta en Zendi</h3>
+<p>Con ella no existen fronteras. Convierte instáneamente a COP y envía a cualquier parte del mundo.</p>
 </div>
 <div class="feature-card">
 <div class="feature-icon">💸</div>
 <h3>Recibe dinero desde todo el mundo</h3>
-<p>Comparte los datos de tus cuentas en USD y EUR para cobrar como local. Tu cliente hará una simple transferencia y tú recibirás el dinero en la misma moneda de origen.</p>
+<p>Facilita a tus clientes internacionales el pago: envíales tus cuentas en USD o EUR y recibe el dinero directamente, en la moneda original.</p>
 </div>
 <div class="feature-card">
 <div class="feature-icon">✈️</div>
 <h3>Transferencias nacionales e internacionales</h3>
-<p>Paga en moneda local a proveedores, servicios freelance y nóminas a +70 destinos sin comisiones y sin esfuerzo.</p>
+<p>Deja atrás las comisiones bancarias. Con Zendi, pagas en la moneda de tu proveedor sin fricción ni sorpresas.</p>
 </div>
 </div>
 </div>
@@ -906,7 +906,7 @@
 <!-- Countries Section -->
 <section class="countries" id="countries">
 <div class="container">
-<h2>Estamos presentes en +90 países</h2>
+<h2>Estamos presentes en +50 países</h2>
 <div class="countries-grid">
 <div class="country-flag">🇺🇸</div>
 <div class="country-flag">🇬🇧</div>
