--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
 </div>
 <div class="container">
 <div class="hero-content">
-<h1>obra como local. Paga internacionalmente. Sin fronteras, sin fricción y con las mejores tasas.</h1>
+<h1>Cobra como local. Paga internacionalmente. Sin fronteras, sin fricción y con las mejores tasas.</h1>
 <p>La solución moderna para agencias de viaje colombianas que quieren operar en el mundo sin límites.</p>
 <div class="cta-buttons">
 <a class="btn btn-primary" href="#contact">Agendar una reunión</a>
