--- a/index.html
+++ b/index.html
@@ -1689,7 +1689,7 @@
 <li><a href="#services">Servicios</a></li>
 <li><a href="#features">Beneficios</a></li>
 <li><a href="#countries">Países</a></li>
-<li><a href="#contact">Agendemos una demo</a></li>
+<li><a href="#contact">Agendar una demo</a></li>
 </ul>
 </nav>
 </header>
@@ -1919,53 +1919,52 @@
 <div class="coverage-stats">
 <div class="stat-card">
 <span class="stat-icon">🌍</span>
-<span class="stat-number">+50</span>
+<span class="stat-number">+53</span>
 <div class="stat-label">Países activos</div>
 <p class="stat-description">En constante expansión</p>
 </div>
 <div class="stat-card">
 <span class="stat-icon">🏦</span>
-<span class="stat-number">200+</span>
-<div class="stat-label">Corresponsales</div>
-<p class="stat-description">Red bancaria global</p>
+<span class="stat-number">+930M</span>
+<div class="stat-label">Dólares</div>
+<p class="stat-description">Transaccionados a nombre de clientes</p>
 </div>
 <div class="stat-card">
 <span class="stat-icon">⚡</span>
-<span class="stat-number">24/7</span>
-<div class="stat-label">Disponibilidad</div>
-<p class="stat-description">Sin restricciones</p>
+<span class="stat-number">+24</span>
+<div class="stat-label">Agencias de Viajes</div>
+<p class="stat-description">Han confiado en nosotros</p>
 </div>
 </div>
 <!-- Countries Showcase -->
 <div class="countries-showcase">
 <div class="regions-container">
-<!-- Primary Markets -->
+<!-- same-name accounts -->
 <div class="region-block primary-region">
-<h3 class="region-title">Mercados Principales</h3>
+<h3 class="region-title">Cobra como local</h3>
 <div class="flags-grid">
 <div class="country-flag">🇺🇸</div>
 <div class="country-flag">🇪🇺</div>
-<div class="country-flag">🇬🇧</div>
 </div>
 <p class="region-description">
-                            Cuentas propias en USD, EUR y GBP para recibir pagos como empresa local
+                            Cuentas propias en USD y EUR para recibir pagos como empresa local
                         </p>
 </div>
-<!-- Latin America -->
+<!-- countries -->
 <div class="region-block">
-<h3 class="region-title">América Latina</h3>
+<h3 class="region-title">Algunos de los países donde ya se puede enviar pagos</h3>
 <div class="flags-grid">
-<div class="country-flag">🇨🇴</div>
+<div class="country-flag">🇨🇳</div>
 <div class="country-flag">🇦🇷</div>
 <div class="country-flag">🇲🇽</div>
-<div class="country-flag">🇨🇱</div>
-<div class="country-flag">🇵🇪</div>
-<div class="country-flag">🇪🇨</div>
+<div class="country-flag">🇮🇹</div>
+<div class="country-flag">🇦🇺</div>
+<div class="country-flag">🇹🇭</div>
 <div class="country-flag">🇺🇾</div>
-<div class="country-flag">🇵🇾</div>
+<div class="country-flag">🇵🇱</div>
 </div>
 <p class="region-description">
-                            Transferencias rápidas y económicas en toda la región
+                            Aperturando cada vez más
                         </p>
 </div>
 </div>
@@ -2023,11 +2022,10 @@
 <a href="terminos.html" target="_blank">Términos y Condiciones</a>
 <a href="datos.html" target="_blank">Política de Tratamiento de Datos</a>
 <a href="aml.html" target="_blank">Políticas AML/CFT</a>
-<a href="#">Contacto</a>
 </div><div class="footer-section">
 <h3>Contacto</h3>
 <p>📧 soporte@zendi.co</p>
-<p>📱 WhatsApp: +57 300 123 4567</p>
+<p>📱 WhatsApp: +55 95 977 1170</p>
 <p>📍 Carrera 11 #93-07, Bogotá, Colombia</p>
 </div>
 </div>
