--- a/index.html
+++ b/index.html
@@ -2034,7 +2034,7 @@ a[aria-label="LinkedIn"] svg:hover {
 </svg>
 </a>
 
-<a class="social-icon" href="https://www.linkedin.com/company/zendiio/?originalSubdomain=br" rel="noopener" target="_blank">🔗</a></div>
+<a class="social-icon" href="https://www.linkedin.com/company/zendiio/?originalSubdomain=br" rel="noopener" target="_blank">.</a></div>
 </div>
 <div class="footer-section">
 <h3>Enlaces Legales</h3>
